--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"discord.js": "12.5.1",
 		"readline": "^1.3.0",
-		"request": "^2.88.2"
+		"request": "^2.88.2",
+		"node-fetch":"2.6.1"
 	}
 }
